--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000 --open",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -12,9 +12,12 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "v1",
     "@tailwindcss/forms": "^0.5.3",
+    "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.4.4",
+    "react-spinners": "^0.13.7",
     "reactjs-localstorage": "^1.0.1",
     "uuid": "^9.0.0"
   },
