--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "v1",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tinymce/tinymce-react": "^4.2.0",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.4.4",
     "react-spinners": "^0.13.7",
+    "react-toastify": "^9.1.1",
     "reactjs-localstorage": "^1.0.1",
     "uuid": "^9.0.0"
   },
